--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "leancloud-storage": "^3.0.2",
     "vue": "^2.3.4",
     "webpack": "^3.2.0"
   }
